[benchmark] [kernels] [pytorch] Introducing KernelBench as a kernel library to benchmark targets #3 - Add KernelBench as a third party repo

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "third_party/iree"]
 	path = third_party/iree
 	url = https://github.com/iree-org/iree.git
+[submodule "third_party/KernelBench"]
+	path = third_party/KernelBench
+	url = https://github.com/ScalingIntelligence/KernelBench.git
