[#5] Add third party repos for ongoing projects (lerobot, openpi, tinyMPC and transformers)

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,10 @@ riscv-tools-*/
 # Ignore compilation phases and report
 compilation_phases_*
 report_pt_export
+
+# Output files
+*.vmfb
+
+# Temporary files
+tmp/*
+backup/*
