--- a/samples/custom_dispatch_ukernels_saturn/CMakeLists.txt
+++ b/samples/custom_dispatch_ukernels_saturn/CMakeLists.txt
@@ -4,7 +4,7 @@ project(RiscVGemmTest C)
 
 # --- 1. Include Plugin Subdirectory ---
 
-add_subdirectory(dispatch_opu_m2_gemm)
+add_subdirectory(dummy_kernel)
 
 # --- Find IREE ---
 if(NOT DEFINED IREE_HOST_BIN_DIR)
@@ -19,9 +19,14 @@ message(STATUS "Using iree-compile: ${IREE_COMPILE_EXECUTABLE}")
 # --- 2. Configure Model Compilation ---
 set(IREE_COMPILE_FLAGS
   --iree-hal-target-backends=llvm-cpu 
-  --iree-llvmcpu-target-triple=riscv64-unknown-linux-gnu 
+  --iree-llvmcpu-target-cpu=generic-rv64
+  --iree-llvmcpu-link-static=false
+  --iree-llvmcpu-target-triple=riscv64-linux-gnu 
   --iree-llvmcpu-target-cpu-features=+m,+a,+f,+d,+v,+zvl512b,+zvbb
   --iree-llvmcpu-target-abi=lp64d
+  --iree-dispatch-creation-data-tiling
+  -mlir-disable-threading
+  --dump-compilation-phases-to=/scratch2/agustin/merlin/samples/custom_dispatch_ukernels_saturn/dummy_kernel/compilation_phases
 )
 
 set(SOURCE_MODEL_MLIR "${CMAKE_CURRENT_SOURCE_DIR}/compilation_phases_fc/model_quantized_ort.mlir")
@@ -30,12 +35,16 @@ set(SOURCE_MODEL_MLIR "${CMAKE_CURRENT_SOURCE_DIR}/compilation_phases_fc/model_q
 set(COMPILED_MODEL_CUSTOM_FILENAME "qgemm_custom_riscv64.vmfb")
 set(COMPILED_MODEL_CUSTOM "${CMAKE_CURRENT_BINARY_DIR}/${COMPILED_MODEL_CUSTOM_FILENAME}")
 
+message(STATUS "Custom Spec MLIR: ${CUSTOM_SPEC_MLIR}")
+message(STATUS "Source Model MLIR: ${SOURCE_MODEL_MLIR}")
+message(STATUS "Current Binary Dir: ${CMAKE_CURRENT_BINARY_DIR}")
+
 add_custom_command(
   OUTPUT ${COMPILED_MODEL_CUSTOM}
   COMMAND ${IREE_COMPILE_EXECUTABLE}
           ${IREE_COMPILE_FLAGS}
           # where to find "riscv_qgemm.o"
-          --iree-hal-executable-object-search-path=${CMAKE_CURRENT_BINARY_DIR}/dispatch_opu_m2_gemm/
+          --iree-hal-executable-object-search-path=${CMAKE_CURRENT_BINARY_DIR}/dummy_kernel/
           # un the match-and-replace
           --iree-preprocessing-transform-spec-filename=${CUSTOM_SPEC_MLIR}
           # input graph
