add several new models

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,12 @@
 [submodule "third_party/KernelBench"]
 	path = third_party/KernelBench
 	url = https://github.com/ScalingIntelligence/KernelBench.git
+[submodule "samples/models/tinydepth/TinyDepth"]
+	path = samples/models/tinydepth/TinyDepth
+	url = https://github.com/ZYCheng777/TinyDepth.git
+[submodule "samples/models/midas/MiDaS"]
+	path = samples/models/midas/MiDaS
+	url = https://github.com/isl-org/MiDaS.git
+[submodule "samples/models/depth_anything_v2/Depth-Anything-V2"]
+	path = samples/models/depth_anything_v2/Depth-Anything-V2
+	url = https://github.com/DepthAnything/Depth-Anything-V2.git
